# repo_of_the_unknown

./: .gitignore  1-october.html  2-ten-days-later.html  2-the-game-jam-begins.html  3-planning.html  3-the-fundamentals-of-a-framework.html  MANIFEST.in  README.md  README.rst  archives.html  authors.html  categories.html  index.html  pyproject.toml  requirements.txt  tags.html
.github/workflows/: pelican_blog.yml
author/: tundish.html
blog/: 00_first_thoughts.rst  01_first_code.rst  developconf.py  pelicanconf.py  publishconf.py
blog/content/: 001_first_thoughts.md  001_signing_up.md  002_first_code.md  002_first_files.md  002_first_thoughts.md  002_interaction.md  003_first_files.md  003_first_guess.md  003_first_ideas.md  004_first_ideas.md  00_first_thoughts.md  01_first_code.md
category/: blog.html
drafts/: 4-plotting.html
feeds/: all.atom.xml  blog.atom.xml
plan/: activities.md  stub_sketch.md  tech.md  track_list.md
rotu/: NOTES.md  __init__.py  drama.py  main.py  puzzle.py  resident.py  story.py  storystager.py  strand.py  world.py
rotu/assets/: basics.css  index.html  layout.css  object.css
rotu/assets/video/: 01-TimeLapse-Ex-Ospedale-Sant-Agostino-Modena.webm
rotu/frames/: session.py
rotu/scenes/: goal_01.scene.toml
rotu/scenes/00/: 0.scene.toml  a.scene.toml
rotu/scenes/01/: a.scene.toml
rotu/scenes/02/: a.scene.toml
rotu/scenes/24/: a.scene.toml
rotu/stages/: 00_tracker_samples.stage.toml
rotu/test/: test_actions.py  test_conversation.py  test_drama.py  test_goals.py  test_popover.py  test_prompter.py  test_puzzle.py  test_resident.py  test_story.py  test_strand.py  utils.py
tag/: balladeer.html  game-jam.html  python.html  releases.html  rotu.html
