# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "rotu"
version = "0.1.0"
description = "A work of Interactive Fiction."
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "COPYING"}
keywords = ["interactive fiction", "game jam"]
authors = [
    {name = "D E Haynes", email = "tundish@gigeconomy.org.uk"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "balladeer >= 0.42.0"
]

[project.scripts]
rotu-server = "rotu.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
]
exclude = [
]
