# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "rotu"
version = "0.8.0"
description = "A work of Interactive Fiction."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "COPYING"}
keywords = ["interactive fiction", "game jam"]
authors = [
    {name = "D E Haynes", email = "tundish@gigeconomy.org.uk"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "balladeer >= 0.52.0",
    "busker >= 0.12.0",
]

[project.optional-dependencies]
blog = [
    "pelican[markdown]",
    "pelican-neighbors",
    "pelican-readtime",
]
test = [
    "aiosqlite>=0.20.0",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
rotu-server = "rotu.main:run"

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
]
exclude = [
".github",
".gitignore",
"blog",
"output",
"plan",
"requirements.txt",
"*.html",
]
